Add: 認証系のOpenAPI追加
