# src/main/java/com/example/ecapi/security/controller/RegisterRequest.java
@@ -1,17 +1,0 @@
-package com.example.ecapi.security.controller;
-
-import com.example.ecapi.security.Role;
-import lombok.Builder;
-import lombok.Data;
-
-@Data
-@Builder
-public class RegisterRequest {
-
-    private String firstname;
-    private String lastname;
-    private String email;
-    private String password;
-    private Role role;
-
-}
